fix: desktop layout broke mobile layout

--- a/css/layout.css
+++ b/css/layout.css
@@ -100,6 +100,9 @@
     }
 
     .two-col-slide{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         justify-content: center;
         gap: 10vw;
         align-items: stretch;
